--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,8 +31,8 @@
 :root {
   --nav-color: #7f7f90;  /* The default color of the main navmenu links */
   --nav-hover-color: #ce1212; /* Applied to main navmenu links when they are hovered over or active */
-  --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
-  --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
+  --nav-mobile-background-color: rgba(0, 0, 0, 0.637); /* Used as the background color for mobile navigation menu */
+  --nav-dropdown-background-color: rgba(0, 0, 0, 0.637); /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #7f7f90; /* Used for navigation links of the dropdown items in the navigation menu. */
   --nav-dropdown-hover-color: #ce1212; /* Similar to --nav-hover-color, this color is applied to dropdown navigation links when they are hovered over. */
 }
